--- a/gsplom.Rcheck/gsplom/html/00Index.html
+++ b/gsplom.Rcheck/gsplom/html/00Index.html
@@ -13,18 +13,21 @@
 </div><h2>Documentation for package &lsquo;gsplom&rsquo; version 0.0.1</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
-<li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
 </ul>
 
 <h2>Help Pages</h2>
 
 
 <table width="100%">
+<tr><td width="25%"><a href="adaptiveRegress.html">adaptiveRegress</a></td>
+<td>High/Low binary partition by adaptive regression.</td></tr>
 <tr><td width="25%"><a href="dcorMatrix.html">dcorMatrix</a></td>
 <td>Compute Distance Correlation Matrix.</td></tr>
 <tr><td width="25%"><a href="dcorMatrixNA.html">dcorMatrixNA</a></td>
 <td>Compute Distance Correlation Matrix with Missing Values in Data.</td></tr>
 <tr><td width="25%"><a href="dcorSingle.html">dcorSingle</a></td>
 <td>Single Pair Distance Correlation.</td></tr>
+<tr><td width="25%"><a href="logicClassMatrix.html">logicClassMatrix</a></td>
+<td>Compute Logical Dependency Class Matrix.</td></tr>
 </table>
 </body></html>
