--- a/gsplom.Rcheck/gsplom/html/00Index.html
+++ b/gsplom.Rcheck/gsplom/html/00Index.html
@@ -13,6 +13,7 @@
 </div><h2>Documentation for package &lsquo;gsplom&rsquo; version 0.0.1</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
+<li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
 </ul>
 
 <h2>Help Pages</h2>
