working glyph splom workflow

--- a/gsplom.Rcheck/gsplom/html/00Index.html
+++ b/gsplom.Rcheck/gsplom/html/00Index.html
@@ -28,6 +28,12 @@
 <td>Compute Distance Correlation Matrix with Missing Values in Data.</td></tr>
 <tr><td width="25%"><a href="dcorSingle.html">dcorSingle</a></td>
 <td>Single Pair Distance Correlation.</td></tr>
+<tr><td width="25%"><a href="gsplom.html">gsplom</a></td>
+<td>Glyph SPLOM Workflow Wrapper</td></tr>
+<tr><td width="25%"><a href="gsplom.html">gsplomCore</a></td>
+<td>Glyph SPLOM Workflow Wrapper</td></tr>
+<tr><td width="25%"><a href="gsplom.html">gsplomPlot</a></td>
+<td>Glyph SPLOM Workflow Wrapper</td></tr>
 <tr><td width="25%"><a href="logicClassMatrix.html">logicClassMatrix</a></td>
 <td>Compute Logical Dependency Class Matrix.</td></tr>
 </table>
